Finish adding reverse proxies

--- a/consul/consul.conf
+++ b/consul/consul.conf
@@ -8,6 +8,9 @@ server {
   listen 8500;
   location / {
     proxy_pass http://consul;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_buffering off;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_redirect off;
+    proxy_set_header Host      $host;
   }
 }
