--- a/vault/config.json
+++ b/vault/config.json
@@ -8,8 +8,9 @@
   },
   "backend": {
     "consul": {
-      "address": "consul1:8500",
-      "scheme": "http"
+      "address": "consul:8500",
+      "scheme": "http",
+      "disable_registration": "true"
     }
   }
 }
