--- a/vault/vault.conf
+++ b/vault/vault.conf
@@ -8,5 +8,9 @@ server {
   listen 8200;
   location / {
     proxy_pass http://vault;
+    proxy_buffering off;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_redirect off;
+    proxy_set_header Host      $host;
   }
 }
