--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,10 @@ services:
       context: consul
     volumes:
       - ${PWD}/consul/config.json:/consul/config/config.json
-    command: agent
+    environment:
+      CONSUL_BIND_INTERFACE: eth0
+      CONSUL_CLIENT_INTERFACE: eth0
+    command: agent -ui
   consul2:
     container_name: consul2
     hostname: consul2
@@ -15,7 +18,10 @@ services:
       context: consul
     volumes:
       - ${PWD}/consul/config.json:/consul/config/config.json
-    command: agent -join consul1
+    environment:
+      CONSUL_BIND_INTERFACE: eth0
+      CONSUL_CLIENT_INTERFACE: eth0
+    command: agent -ui -join consul1
     depends_on:
       - consul1
   consul3:
@@ -25,7 +31,10 @@ services:
       context: consul
     volumes:
       - ${PWD}/consul/config.json:/consul/config/config.json
-    command: agent -join consul1
+    environment:
+      CONSUL_BIND_INTERFACE: eth0
+      CONSUL_CLIENT_INTERFACE: eth0
+    command: agent -ui -join consul1
     depends_on:
       - consul1
   consul:
@@ -50,6 +59,7 @@ services:
       - ${PWD}/vault/config.json:/vault/config/config.json
     environment:
       VAULT_REDIRECT_INTERFACE: eth0
+      VAULT_CLUSTER_INTERFACE: eth0
     command: server
     privileged: true
     depends_on:
@@ -65,6 +75,7 @@ services:
       - ${PWD}/vault/config.json:/vault/config/config.json
     environment:
       VAULT_REDIRECT_INTERFACE: eth0
+      VAULT_CLUSTER_INTERFACE: eth0
     command: server
     privileged: true
     depends_on:
@@ -80,6 +91,7 @@ services:
       - ${PWD}/vault/config.json:/vault/config/config.json
     environment:
       VAULT_REDIRECT_INTERFACE: eth0
+      VAULT_CLUSTER_INTERFACE: eth0
     command: server
     privileged: true
     depends_on:
