--- a/consul/Dockerfile
+++ b/consul/Dockerfile
@@ -1,5 +1,4 @@
-FROM alpine:3.6
-MAINTAINER James Phillips <james@hashicorp.com> (@slackpad)
+FROM ubuntu
 
 # This is the release of Consul to pull in.
 ENV CONSUL_VERSION=0.9.2
@@ -14,10 +13,11 @@ ENV HASHICORP_RELEASES=https://releases.hashicorp.com
 # Create a consul user and group first so the IDs get set the same way, even as
 # the rest of this may change over time.
 RUN addgroup consul && \
-    adduser -S -G consul consul
+    adduser --system --group consul
 
 # Set up certificates, our base tools, and Consul.
-RUN apk add --no-cache ca-certificates curl gnupg libcap openssl && \
+RUN apt-get update && \
+    apt-get -y install wget unzip && \
     gpg --keyserver pgp.mit.edu --recv-keys 91A6E7F85D05C65630BEF18951852D87348FFC4C && \
     mkdir -p /tmp/build && \
     cd /tmp/build && \
@@ -36,7 +36,6 @@ RUN apk add --no-cache ca-certificates curl gnupg libcap openssl && \
     unzip -d /bin consul_${CONSUL_VERSION}_linux_amd64.zip && \
     cd /tmp && \
     rm -rf /tmp/build && \
-    apk del gnupg openssl && \
     rm -rf /root/.gnupg
 
 # The /consul/data dir is used by Consul to store state. The agent will be started
@@ -65,10 +64,10 @@ EXPOSE 8500 8600 8600/udp
 # Consul doesn't need root privileges so we run it as the consul user from the
 # entry point script. The entry point script also uses dumb-init as the top-level
 # process to reap any zombie processes created by Consul sub-processes.
-COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
-ENTRYPOINT ["docker-entrypoint.sh"]
+#COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+#ENTRYPOINT ["docker-entrypoint.sh"]
 
 # By default you'll get an insecure single-node development server that stores
 # everything in RAM, exposes a web UI and HTTP endpoints, and bootstraps itself.
 # Don't use this configuration for production.
-CMD ["agent", "-dev", "-client", "0.0.0.0"]
+#CMD ["agent", "-dev", "-client", "0.0.0.0"]
